cluster2/traefik/ingressRoute_dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik2.test`)
    middlewares:
    - name: traefik-oauth-redirect
    kind: Rule
    services:
    - name: traefik-dashboard-service
      port: 9000
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-oauth-redirect
spec:
  forwardAuth:
    address: http://oauth.traefik2.test
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-Access-Token
      - Authorization
      - X-Auth-Request-Redirect
